Fix video height issues for overflow

--- a/css/app.css
+++ b/css/app.css
@@ -13394,9 +13394,17 @@ body.index {
   .updatePost#making-2jz-4x4-tacoma-motor-mounts .fab-pen-section .fab-pen-prose .fab-pen-img-wrap img.fab-pen-2 {
     left: -30px;
   }
+  .updatePost#making-2jz-4x4-tacoma-motor-mounts .fab-pen-section .fab-pen-media video {
+    min-height: 420px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
 }
 
 @media screen and (min-width: 56.25em) {
+  .updatePost#making-2jz-4x4-tacoma-motor-mounts .fab-pen-section {
+    height: 420px;
+  }
   .updatePost#making-2jz-4x4-tacoma-motor-mounts .fab-pen-section .fab-pen-prose {
     width: 50%;
     float: left;
@@ -13468,12 +13476,6 @@ body.index {
     font-size: 14px;
     width: 160px;
     padding-top: 6px;
-  }
-  .updatePost#making-2jz-4x4-tacoma-motor-mounts .fab-pen-section .fab-pen-media video {
-    -o-object-fit: cover;
-       object-fit: cover;
-    min-height: 420px;
-    width: 100%;
   }
 }
 
